unpackaged/main/default/objects/Contract/fields/Meses_Antig_edad__c.field-meta.xml
<CustomField>
    <fullName>Meses_Antig_edad__c</fullName>
    <label>Meses Antigüedad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>