unpackaged/main/default/objects/Contract/fields/Nacionalidad1__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad1__c</fullName>
    <formula>TEXT(Account.Nacionalidad__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nacionalidad</label>
    <type>Text</type>
</CustomField>