unpackaged/main/default/objects/Contract/fields/No_De_Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>No_De_Fideicomiso__c</fullName>
    <label>No. De Fideicomiso</label>
    <length>20</length>
    <type>Text</type>
</CustomField>