unpackaged/main/default/objects/Contract/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <label>Notaría</label>
    <length>100</length>
    <type>Text</type>
</CustomField>