unpackaged/main/default/objects/Contract/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Dictaminación</relationshipLabel>
    <relationshipName>Dictaminacion</relationshipName>
    <type>Lookup</type>
</CustomField>