unpackaged/main/default/objects/Contract/fields/Otro_telefono__c.field-meta.xml
<CustomField>
    <fullName>Otro_telefono__c</fullName>
    <formula>Account.Otro_Telefono__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otro teléfono</label>
    <type>Text</type>
</CustomField>