unpackaged/main/default/objects/Contract/fields/Pais_de_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacionalidad__c</fullName>
    <formula>Nacionalidad1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País de Nacionalidad</label>
    <type>Text</type>
</CustomField>