unpackaged/main/default/objects/Contract/fields/Porcentaje_Accionistas_3__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Accionistas_3__c</fullName>
    <label>Porcentaje Accionistas 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>