unpackaged/main/default/objects/Contract/fields/Rep_Legales_Count__c.field-meta.xml
<CustomField>
    <fullName>Rep_Legales_Count__c</fullName>
    <label>Rep Legales Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>