unpackaged/main/default/objects/Contract/fields/Requiere_Info_CoAcreditado__c.field-meta.xml
<CustomField>
    <fullName>Requiere_Info_CoAcreditado__c</fullName>
    <formula>IF( OR(Tipo_de_Tramite__c =&quot;COFINAVIT CONYUGAL&quot;,
       Tipo_de_Tramite__c =&quot;CONYUGAL&quot;,
       Tipo_de_Tramite__c =&quot;CONYUGAL C/SUBSIDIO 2.6 VSM&quot;,
       Tipo_de_Tramite__c =&quot;CONYUGAL C/SUBSIDIO 5 VSM&quot;,
       Tipo_de_Tramite__c =&quot;FOVISSSTE PARA TODOS&quot;,
       Tipo_de_Tramite__c =&quot;UNAMOS CREDITOS&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere Info CoAcreditado?</label>
    <type>Checkbox</type>
</CustomField>