unpackaged/main/default/objects/Contract/fields/RFC_Compania__c.field-meta.xml
<CustomField>
    <fullName>RFC_Compania__c</fullName>
    <label>RFC Compañía</label>
    <length>13</length>
    <type>Text</type>
</CustomField>