unpackaged/main/default/objects/Contract/fields/RFC_del__c.field-meta.xml
<CustomField>
    <fullName>RFC_del__c</fullName>
    <formula>Account.RFC_Completo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFC</label>
    <type>Text</type>
</CustomField>