unpackaged/main/default/objects/Contract/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <formula>TEXT(Account.Sexo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sexo</label>
    <type>Text</type>
</CustomField>