unpackaged/main/default/objects/Contract/fields/SkipValidation__c.field-meta.xml
<CustomField>
    <fullName>SkipValidation__c</fullName>
    <formula>BLANKVALUE(ValidationBypassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SkipValidation</label>
    <type>Checkbox</type>
</CustomField>