unpackaged/main/default/objects/Contract/fields/Sub_Canal_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Sub_Canal_de_Venta__c</fullName>
    <label>Sub Canal de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_canal_de_venta</valueSetName>
    </valueSet>
</CustomField>