unpackaged/main/default/objects/Contract/fields/Sub_Canal_de_Venta_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sub_Canal_de_Venta_Formula__c</fullName>
    <formula>TEXT(Oportunidad__r.Sub_Canal_de_Venta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Canal de Venta</label>
    <type>Text</type>
</CustomField>