unpackaged/main/default/objects/Contract/fields/Telefono_Casa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Casa__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Casa</label>
    <type>Text</type>
</CustomField>