unpackaged/main/default/objects/Contract/fields/Telefono_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Trabajo__c</fullName>
    <label>Teléfono Trabajo</label>
    <type>Phone</type>
</CustomField>