unpackaged/main/default/objects/Contract/fields/Tipo_Contribuyente_c__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Contribuyente_c__c</fullName>
    <formula>Account.Tipo_Contribuyente__c</formula>
    <label>Tipo Contribuyente</label>
    <type>Text</type>
</CustomField>