unpackaged/main/default/objects/Contract/fields/Tipo_de_Tramite__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tramite__c</fullName>
    <formula>TEXT(Oportunidad__r.Tipo_de_Tramite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Trámite</label>
    <type>Text</type>
</CustomField>