unpackaged/main/default/objects/Contract/fields/ValidationBypassDateTime__c.field-meta.xml
<CustomField>
    <fullName>ValidationBypassDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Actualizar este campo con cualquier valor para brincarse algunas reglas de validacion</description>
    <label>ValidationBypassDateTime</label>
    <type>DateTime</type>
</CustomField>