unpackaged/main/default/objects/Contract/recordTypes/Persona_Fisica.recordType-meta.xml
<RecordType>
    <fullName>Persona_Fisica</fullName>
    <active>true</active>
    <label>Dictaminación</label>
</RecordType>