unpackaged/main/default/objects/Contract/recordTypes/Persona_Moral.recordType-meta.xml
<RecordType>
    <fullName>Persona_Moral</fullName>
    <active>false</active>
    <label>Persona Moral</label>
</RecordType>