unpackaged/main/default/objects/Contract/validationRules/Es_Ud_Titular_de_Recursos_Requerida.validationRule-meta.xml
<ValidationRule>
    <fullName>Es_Ud_Titular_de_Recursos_Requerida</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
!SkipValidation__c &amp;&amp;
ISBLANK(TEXT(Es_usted_el_Titular_de_Recursos__c)) &amp;&amp;

!ISCHANGED(C_dula_de_Identifiaci_n_Fiscal__c) &amp;&amp;
!ISCHANGED(No_De_Fideicomiso__c) &amp;&amp;
!ISCHANGED(Hijos__c) &amp;&amp;
!ISCHANGED(Dependientes_economicos__c) &amp;&amp;
!ISCHANGED(Ingresos_mensuales__c)</errorConditionFormula>
    <errorDisplayField>Es_usted_el_Titular_de_Recursos__c</errorDisplayField>
    <errorMessage>Pregunta requerida: ¿Es usted el Titular de Recursos?</errorMessage>
</ValidationRule>