unpackaged/main/default/objects/Contract/validationRules/Escritura_a_Favor_de_un_Tercero_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_a_Favor_de_un_Tercero_Req</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
!SkipValidation__c &amp;&amp;
TEXT(Firma_Directa_Cliente__c)=&#39;NO&#39; &amp;&amp;
ISBLANK(TEXT(Escritura_a_favor_de_un_Tercero__c)) &amp;&amp;

!ISCHANGED(C_dula_de_Identifiaci_n_Fiscal__c) &amp;&amp;
!ISCHANGED(No_De_Fideicomiso__c) &amp;&amp;

!ISCHANGED(Hijos__c) &amp;&amp;
!ISCHANGED(Dependientes_economicos__c) &amp;&amp;
!ISCHANGED(Ingresos_mensuales__c)</errorConditionFormula>
    <errorDisplayField>Escritura_a_favor_de_un_Tercero__c</errorDisplayField>
    <errorMessage>Se requiere capturar &quot;Escritura a Favor de un Tercero&quot;</errorMessage>
</ValidationRule>