unpackaged/main/default/objects/Contract/validationRules/Firma_Directa_Cliente_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Firma_Directa_Cliente_Req</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
!SkipValidation__c &amp;&amp;
ISBLANK(TEXT(Firma_Directa_Cliente__c)) &amp;&amp;

!ISCHANGED(C_dula_de_Identifiaci_n_Fiscal__c) &amp;&amp;
!ISCHANGED(No_De_Fideicomiso__c) &amp;&amp;

!ISCHANGED(Hijos__c) &amp;&amp;
!ISCHANGED(Dependientes_economicos__c) &amp;&amp;
!ISCHANGED(Ingresos_mensuales__c)</errorConditionFormula>
    <errorDisplayField>Firma_Directa_Cliente__c</errorDisplayField>
    <errorMessage>Pregunta &quot;Firma Directa Cliente&quot; requerida</errorMessage>
</ValidationRule>