unpackaged/main/default/objects/Contract/validationRules/Hijos_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Hijos_Requerido</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
!SkipValidation__c &amp;&amp;
Tipo_Contribuyente_c__c=&#39;PERSONA FISICA&#39; &amp;&amp;
ISBLANK(Hijos__c) &amp;&amp;
!ISCHANGED(Escritura_a_favor_de_un_Tercero__c) &amp;&amp;
!ISCHANGED(Es_usted_el_Titular_de_Recursos__c) &amp;&amp;
!ISCHANGED(Firma_Directa_Apoderado_Legal__c) &amp;&amp;
!ISCHANGED(Firma_Directa_Cliente__c) &amp;&amp;
!ISCHANGED(Primera_Compra_en_JAVER__c) &amp;&amp;
!ISCHANGED(C_dula_de_Identifiaci_n_Fiscal__c) &amp;&amp;
!ISCHANGED(No_De_Fideicomiso__c)</errorConditionFormula>
    <errorDisplayField>Hijos__c</errorDisplayField>
    <errorMessage>Campo &quot;Hijos&quot; requerido</errorMessage>
</ValidationRule>