unpackaged/main/default/objects/Contract/validationRules/Primera_Compra_en_Javer_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Primera_Compra_en_Javer_Req</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
!SkipValidation__c &amp;&amp;
ISBLANK(text(Primera_Compra_en_JAVER__c)) &amp;&amp;

!ISCHANGED(C_dula_de_Identifiaci_n_Fiscal__c) &amp;&amp;
!ISCHANGED(No_De_Fideicomiso__c) &amp;&amp;

!ISCHANGED(Hijos__c) &amp;&amp;
!ISCHANGED(Dependientes_economicos__c) &amp;&amp;
!ISCHANGED(Ingresos_mensuales__c)</errorConditionFormula>
    <errorDisplayField>Primera_Compra_en_JAVER__c</errorDisplayField>
    <errorMessage>Pregunta &quot;Es primera compra en Javer&quot; requerida</errorMessage>
</ValidationRule>